tests/syntactic/syntax6/syntax6.err
Error: syntax error, unexpected + in file syntax6.dl at line 3
+
^-
1 errors generated, evaluation aborted
